# b39-collector

./: README.md
client/esp32s3/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
client/esp32s3/main/: CMakeLists.txt  config.h  gpio_button.c  gpio_button.h  http_client.c  http_client.h  http_server.c  http_server.h  led_status.c  led_status.h  main.c  usb_cdc.c  usb_cdc.h  wifi_manager.c  wifi_manager.h  ws2812b.c  ws2812b.h
client/esp32s3/main/web/: index.html
server/: .dockerignore  .gitignore  Dockerfile  README.md  build.ps1  docker-compose.yml  go.mod  main.go
server/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
server/web/src/: App.vue
server/web/src/components/: Anomalies.vue  AqiCard.vue  Co2TrendChart.vue  CorrelationCard.vue  HchoTrendChart.vue  Pm25TrendChart.vue  RealtimeData.vue  StatsTable.vue  Suggestions.vue  TrendChart.vue
server/web/src/composables/: useSensor.ts
